# cloudwrap

./: .gitignore  .travis.yml  Cargo.toml  README.md  Vagrantfile  build_apk.sh  test.py
.github/workflows/: rust.yml
ci/: build_apk.sh  build_deb.sh  build_deb_post_install.sh
src/: cli.yml  error.rs  main.rs  output.rs  secretsmanager.rs  ssm.rs
