[package]
name = "cloudwrap"
version = "0.5.9"
authors = ["Stephen Cirner <scirner22@gmail.com>"]
license = "Apache-2.0"
repository = "https://github.com/Blackfynn/cloudwrap"
homepage = "https://github.com/Blackfynn/cloudwrap"
description = """
Wrapper utility that injects configuration fields into an executable command.
"""

[dependencies]
chrono = "0.4"
clap = { version = "2.31", features = ["yaml"] }
ctrlc = { version = "3.0", features = ["termination"] }
openssl-probe = "0.1"
prettytable-rs = "0.6"
rusoto_core = { version = "0.37" }
rusoto_ssm = { version = "0.37" }
rusoto_secretsmanager = { version = "0.37" }
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
